Corrected in class, added missing third paragraph to last section, applied padding to body tag instead of only the h2 element, added margin to h2 element, added text-align center to the 3rd p tags

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   width: 80%;
   margin: 20px auto;
   text-align: right;
+  padding: 0 15px;
   /* BONUS ROUNDED EDGES */
   border-radius: 25px;
 }
@@ -17,27 +18,32 @@ h2 {
   font-size: 48px;
   color:  #3D3D3D;
   text-align: left;
-  padding-left: 15px;
+  /* Sets the top margin to 20px, left/right to 0, bottom to 0 */
+  /* Top, Left/Right, Bottom */
+  margin: 20px 0 0;
 }
 /* BONUS HOVER & SPREAD */
 h2:hover {
-letter-spacing: 25px;
-}
-
-#two {
-  border-bottom: 10px solid #BDC3C7;
-  width: 95%;
+  text-align: center;
+  letter-spacing: 25px;
+  /* letter-spacing: 1.7vmax; */
 }
 
 #date {
   color: #3498DB;
   text-transform:uppercase;
 }
+
 #one {
-  border-bottom: 4px solid #BDC3C7;
+  border-bottom: 5px solid #BDC3C7;
   width: 95%;
 }
-/* BONUS TERRITORY */
-hr {
-  
+
+#two {
+  border-bottom: 10px solid #BDC3C7;
+  width: 95%;
 }
+p:nth-of-type(3) {
+  text-align: center;
+}
+
